[package]
name = "proton-media-converter"
version = "7.0.0"
authors = ["Andrew Eikum <aeikum@codeweavers.com>"]
repository = "https://github.com/ValveSoftware/Proton/"
license = "MIT/Apache-2.0"
edition = "2021"
description = "Proton media converter"

[dependencies]
glib = "0.14"
gstreamer = "0.17.4"

# the versions are not in sync, the submodules below haven't seen any changes
# since 0.17.2 release so .3 and .4 releases haven't happened
gstreamer-base = "0.17.2"
gstreamer-video = "0.17.2"
gstreamer-audio = "0.17.2"

once_cell = "1.9"
crc32fast = "1.3"
array-init = "2.0"

[lib]
name = "protonmediaconverter"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.2"

[profile.release]
lto = true
opt-level = 3
debug = false
panic = 'unwind'

[profile.dev]
opt-level = 1

#if you need local modifications to gstreamer-rs you can point to it here
#[patch.'https://github.com/sdroege/gstreamer-rs']
#gstreamer = { path = "../gstreamer-rs/gstreamer" }
#gstreamer-base = { path = "../gstreamer-rs/gstreamer-base" }
#gstreamer-video = { path = "../gstreamer-rs/gstreamer-video" }
#gstreamer-audio = { path = "../gstreamer-rs/gstreamer-audio" }
