[package]
name = "proton-media-converter"
version = "7.0.0"
authors = ["Andrew Eikum <aeikum@codeweavers.com>"]
repository = "https://github.com/ValveSoftware/Proton/"
license = "MIT/Apache-2.0"
edition = "2021"
description = "Proton media converter"

[dependencies]
glib = "0.16"
gstreamer = "0.19.1"

# the versions are not in sync, the submodules below haven't seen any changes
# since 0.19.0 release so .1 release haven't happened for them
gstreamer-base = "0.19.1"
gstreamer-video = "0.19.0"
gstreamer-audio = "0.19.0"

once_cell = "1.9"
crc32fast = "1.3"
array-init = "2.0"
filetime = "0.2"

[lib]
name = "protonmediaconverter"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.4"

[profile.release]
lto = true
opt-level = 3
debug = false
panic = 'unwind'

[profile.dev]
opt-level = 1

#if you need local modifications to gstreamer-rs you can point to it here
#[patch.'https://github.com/sdroege/gstreamer-rs']
#gstreamer = { path = "../gstreamer-rs/gstreamer" }
#gstreamer-base = { path = "../gstreamer-rs/gstreamer-base" }
#gstreamer-video = { path = "../gstreamer-rs/gstreamer-video" }
#gstreamer-audio = { path = "../gstreamer-rs/gstreamer-audio" }
